# VisualizerProject

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  run.bat
include/: AppLoop.hpp  Common.hpp  EventManager.hpp  RendererCommon.hpp  StateManager.hpp  UIManager.hpp
include/Core/: AnimationManager.hpp  AppLoop.hpp  EventManager.hpp  InputManager.hpp  PlaybackController.hpp  StateManager.hpp
include/DS/: HighlightTheme.hpp  IDataStructure.hpp  IDataStructureUI.hpp
include/DS/Graph/: Graph.hpp  GraphUI.hpp
include/DS/HashTable/: HashTable.hpp  HashTableUI.hpp
include/DS/LinkedList/: LinkedList.hpp  LinkedListUI.hpp
include/DS/Tree/: AVL.hpp  AVLUI.hpp
include/DS/Tree/AVL/: AVL.hpp  AVLUI.hpp
include/DS/Tree/Trie/: Trie.hpp  TrieUI.hpp
include/Graphics/: Helper.hpp  RendererCommon.hpp  UIManager.hpp
include/Graphics/Panels/: Button.hpp  HighlightTheme.hpp  MainMenu.hpp  NavigationBar.hpp  PseudocodePanel.hpp  Textbox.hpp
src/: AppLoop.cpp  EventManager.cpp  RendererCommon.cpp  StateManager.cpp  UIManager.cpp  main.cpp
src/Core/: AnimationManager.cpp  AppLoop.cpp  EventManager.cpp  InputManager.cpp  PlaybackController.cpp  StateManager.cpp
src/DS/: IDataStructure.cpp  IDataStructureUI.cpp
src/DS/Graph/: Graph.cpp  GraphUI.cpp
src/DS/HashTable/: HashTable.cpp  HashTableUI.cpp
src/DS/LinkedList/: LinkedList.cpp  LinkedListUI.cpp
src/DS/Tree/: AVL.cpp  AVLUI.cpp
src/DS/Tree/AVL/: AVL.cpp  AVLInsert.cpp  AVLRemove.cpp  AVLRotation.cpp  AVLSearch.cpp  AVLSnapshot.cpp  AVLUI.cpp
src/DS/Tree/Trie/: Trie.cpp  TrieUI.cpp
src/Graphics/: Helper.cpp  RendererCommon.cpp  UIManager.cpp
src/Graphics/Panels/: Button.cpp  MainMenu.cpp  NavigationBar.cpp  PseudocodePanel.cpp
src/Tree/: AVL.cpp
